--- a/config/database.yml
+++ b/config/database.yml
@@ -26,13 +26,15 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  adapter: postgresql
-  encoding: unicode
-  database: Conversionly_test
+production:
+  adapter: mysql
+  database: cbox
+  host: thefacephone.ce6ojopwii3x.us-east-1.rds.amazonaws.com
+  username: cbox
+  password: cbox123
   pool: 5
-  username: postgres
-  password: postgres
+  timeout: 5000
+
 
 production:
   adapter: mysql
