--- a/config/database.yml
+++ b/config/database.yml
@@ -26,8 +26,8 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-production:
-  adapter: mysql
+test:
+  adapter: mysql2
   database: cbox
   host: thefacephone.ce6ojopwii3x.us-east-1.rds.amazonaws.com
   username: cbox
@@ -37,7 +37,7 @@ production:
 
 
 production:
-  adapter: mysql
+  adapter: mysql2
   database: cbox
   host: thefacephone.ce6ojopwii3x.us-east-1.rds.amazonaws.com
   username: cbox
